--- a/node_server/views/garage_route.jade
+++ b/node_server/views/garage_route.jade
@@ -1,9 +1,28 @@
-extends layout
+doctype html
+html
+    head
+        title= title
+        link(rel='stylesheet', href='/stylesheets/style.css')
+        meta(name= "google-signin-scope", content= "profile email")
+        meta(name= "google-signin-client_id" content= "#{client_id}.apps.googleusercontent.com")
+        script(src="https://apis.google.com/js/platform.js", async, defer)
+    body
+        h1= title
+        div(class="g-signin2", data-onsuccess="onSignIn" data-theme="dark")
+        script.
+            function onSignIn(googleUser) {
+                var profile=googleUser.getBasicProfile();
+                console.log("ID: " + profile.getId());
+                console.log("Name: " + profile.getName());
+                console.log("Image Url: " + profile.getImageUrl());
+                console.log("Email: " + profile.getEmail());
 
-block content
-    h1= title
-    if garage.isDoorOpen()
-        p Garage is Open!
-    else
-        p Garage is Closed!
-    p #[a(href="garage/toggle") Toggle Door]
+                var id_token = googleUser.getAuthResponse().id_token;
+                console.log("ID Token: " + id_token);
+            }
+
+        if garage.isDoorOpen()
+            p Garage is Open!
+        else
+            p Garage is Closed!
+        p #[a(href="garage/toggle") Toggle Door]
